Edit margin/padding to prevent navbar overlap

--- a/styles/Gallery.module.css
+++ b/styles/Gallery.module.css
@@ -4,9 +4,9 @@
   /* margin: 0 auto; */
   display: flex;
   justify-content: center;
-  padding: 2rem 0;
+  padding: 4rem 0;
   height: 100%;
-  min-height: 100vh;
+  /* min-height: 100vh; */
 }
 
 .container {
